--- a/examples/QtExample/mainwindow.ui
+++ b/examples/QtExample/mainwindow.ui
@@ -91,6 +91,9 @@
         <property name="text">
          <string>PAD 1</string>
         </property>
+        <property name="checkable">
+         <bool>true</bool>
+        </property>
        </widget>
       </item>
       <item row="1" column="0">
